[package]
name = "mls"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
openmls = "0.4.1"
openmls_rust_crypto = "0.1.0"
libp2p = "0.43.0"
futures = "0.3.21"
async-std = { version = "1.10.0", features = ["attributes"] }
lazy_static = "1.4.0"
docopt = "1.1.1"
env_logger = "0.9.0"
log = "0.4.17"
colored = "2.0.0"
